feat(metadata): Display all XMP properties into images detail view.